# supermin

./: .cvsignore  .depend  .gitignore  .gitmodules  HACKING  Makefile.am  README  TODO  autobuild.sh  autogen.sh  bootstrap  config.ml.in  configure.ac  fakechroot-2.8-relchroot.patch  fakechroot-2.9-cmdsubst.patch  fakechroot-svn-no-dup-envs.patch  febootstrap-fix-root.pod  febootstrap-install.pod  febootstrap-install.sh  febootstrap-minimize.pod  febootstrap-minimize.sh  febootstrap-run.pod  febootstrap-run.sh  febootstrap-supermin-helper.c  febootstrap-supermin-helper.pod  febootstrap-supermin-helper.sh  febootstrap-to-initramfs.pod  febootstrap-to-initramfs.sh  febootstrap-to-supermin.pod  febootstrap-to-supermin.sh  febootstrap.ml  febootstrap.pod  febootstrap.sh  febootstrap.spec.in  febootstrap_cmdline.ml  febootstrap_cmdline.mli  febootstrap_debian.ml  febootstrap_package_handlers.ml  febootstrap_package_handlers.mli  febootstrap_pacman.ml  (+2 more)
debian/: .gitignore  changelog.in  control  dirs  rules
examples/: .cvsignore  Makefile.am  README  build-basic-vm.sh  guestfs-test.sh  minimal-filesystem.sh
helper/: Makefile.am  README  appliance.c  checksum.c  cpio.c  elf-default-arch  ext2.c  ext2cpio.c  ext2initrd.c  ext2internal.h  febootstrap-supermin-helper.pod  helper.h  init.c  kernel.c  main.c  supermin-helper.pod  utils.c
init/: Makefile.am  init.c
lib/: .gitignore
m4/: .gitignore  gnulib-cache.m4
src/: .depend  Makefile.am  bin2c.pl  bin2s.pl  build.ml  build.mli  chroot.ml  config.ml.in  dpkg.ml  dpkg.mli  ext2.ml  ext2_initrd.ml  ext2_initrd.mli  ext2fs-c.c  ext2fs.ml  ext2fs.mli  ext2init-c.c  febootstrap.ml  febootstrap.pod  febootstrap_cmdline.ml  febootstrap_cmdline.mli  febootstrap_debian.ml  febootstrap_package_handlers.ml  febootstrap_package_handlers.mli  febootstrap_pacman.ml  febootstrap_utils.mli  febootstrap_yum_rpm.ml  fnmatch-c.c  fnmatch.ml  fnmatch.mli  format-ext2-init-c.c  format_chroot.ml  format_chroot.mli  format_ext2.ml  format_ext2.mli  format_ext2_init.ml  format_ext2_init.mli  format_ext2_initrd.ml  format_ext2_initrd.mli  format_ext2_kernel.ml  (+49 more)
tests/: Makefile.am  automake2junit.ml  test-basic.sh  test-binaries-exist-network.sh  test-binaries-exist.sh  test-build-bash-network.sh  test-build-bash.sh  test-execstack.sh  test-harder-network.sh  test-harder.sh  test-if-newer-ext2.sh
